--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <version>2.2.18</version>
     </dependency>
     <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>5.0</version>
+    </dependency>
+    <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-web-api</artifactId>
       <version>7.0</version>
@@ -102,4 +107,12 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+    <repository>
+      <url>http://repository.primefaces.org/</url>
+      <id>PrimeFaces-maven-lib</id>
+      <layout>default</layout>
+      <name>Repository for library PrimeFaces-maven-lib</name>
+    </repository>
+  </repositories>
 </project>
